# SpeedControl

./: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  WORKFLOW.md  build.ps1  build.sh  deny.toml
.github/workflows/: ci.yml
src/: commands.rs  config.rs  errors.rs  events.rs  lib.rs  persistence.rs  speed_type.rs
